--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "test:ui": "vitest --ui",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
     "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
+    "format": "./scripts/prettier-run.sh write",
+    "format:check": "./scripts/prettier-run.sh check",
     "type-check": "tsc --noEmit",
     "build": "tsc",
     "clean": "rm -rf dist coverage node_modules/.cache",
