--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,6 +113,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.24.10"
+          cache-dependency-path: auth/go.sum
 
       - name: 🧪 Run comprehensive tests
         working-directory: ./auth
@@ -122,7 +123,7 @@ jobs:
 
       - name: 🔒 Security scan
         run: |
-          go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+          go install github.com/securego/gosec/v2/cmd/gosec@latest
           gosec ./auth/...
 
   # Создание релиза
