--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🔍 Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@v4
         with:
           languages: ${{ matrix.language }}
           queries: +security-and-quality
@@ -58,6 +58,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.24.10"
+          cache-dependency-path: auth/go.sum
 
       # Настройка окружения для JavaScript/TypeScript
       - name: 🟢 Setup Node.js
@@ -73,11 +74,11 @@ jobs:
 
       # Автоматическая сборка
       - name: 🏗️ Autobuild
-        uses: github/codeql-action/autobuild@v3
+        uses: github/codeql-action/autobuild@v4
 
       # Выполнение анализа CodeQL
       - name: 🔍 Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@v4
         with:
           category: "/language:${{ matrix.language }}"
 
@@ -96,6 +97,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.24.10"
+          cache-dependency-path: auth/go.sum
 
       - name: 🔍 Run Go vulnerability check
         working-directory: ./auth
@@ -177,7 +179,7 @@ jobs:
           severity: "CRITICAL,HIGH,MEDIUM"
 
       - name: 📤 Upload Trivy results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
@@ -191,7 +193,7 @@ jobs:
           severity-cutoff: high
 
       - name: 📤 Upload Grype results
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: ${{ steps.grype-scan.outputs.sarif }}
@@ -217,7 +219,7 @@ jobs:
           soft_fail: true
 
       - name: 📤 Upload Checkov results
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: checkov-results.sarif
