docs: restructure archives and refresh references

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -93,6 +93,7 @@ repos:
         exclude: |
           (?x)^(
             \.env.*|
+            mkdocs\.yml|
             conf/litellm/config\.yaml|
             conf/.*\.yml|
             conf/.*\.yaml|
