docs: add archive/data checks and DE localization updates

--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,7 @@ tmp/
 # ДАННЫЕ И КОНФИГУРАЦИИ СЕРВИСОВ
 # ===================================================================
 data/
+!docs/data/
 conf/**/*.conf
 conf/**/*.ini
 conf/**/*.json
