--- a/compose.yml
+++ b/compose.yml
@@ -8,21 +8,22 @@
 x-critical-logging: &critical-logging
   driver: "fluentd"
   options:
-    fluentd-address: "localhost:24224"
+    fluentd-address: "127.0.0.1:24224"
     fluentd-async: "true"
     fluentd-retry-wait: "1s"
     fluentd-max-retries: "10"
+    fluentd-buffer-limit: "16777216"
+    fluentd-sub-second-precision: "true"
     tag: "critical.{{.Name}}"
     labels: "service,version,environment,level=critical"
-    # Backup в json-file для надежности
-    fluentd-buffer-limit: "16777216"
+    # JSON fallback обеспечивается tail-инпутом Fluent Bit
 
 # УРОВЕНЬ 2 - Важные сервисы (SearXNG, Redis, Backrest, Auth, Cloudflared)
 # Fluentd с буферизацией, стандартная надежность
 x-important-logging: &important-logging
   driver: "fluentd"
   options:
-    fluentd-address: "localhost:24224"
+    fluentd-address: "127.0.0.1:24224"
     fluentd-async: "true"
     fluentd-retry-wait: "2s"
     fluentd-max-retries: "5"
@@ -30,23 +31,27 @@ x-important-logging: &important-logging
     labels: "service,version,environment,level=important"
 
 # УРОВЕНЬ 3 - Вспомогательные сервисы (Docling, EdgeTTS, Tika, MCP)
-# JSON-file с компрессией, базовое логгирование
+# Fluentd с отдельными тэгами + tail fallback
 x-auxiliary-logging: &auxiliary-logging
-  driver: "json-file"
+  driver: "fluentd"
   options:
-    max-size: "10m"
-    max-file: "3"
-    compress: "true"
+    fluentd-address: "127.0.0.1:24224"
+    fluentd-async: "true"
+    fluentd-retry-wait: "2s"
+    fluentd-max-retries: "5"
+    tag: "auxiliary.{{.Name}}"
     labels: "service,version,level=auxiliary"
 
 # УРОВЕНЬ 4 - Мониторинговые сервисы (Prometheus, Grafana, Exporters)
-# Минимальное логгирование с агрессивной ротацией
+# Минимальное Fluentd логгирование + агрессивная фильтрация
 x-monitoring-logging: &monitoring-logging
-  driver: "json-file"
+  driver: "fluentd"
   options:
-    max-size: "5m"
-    max-file: "2"
-    compress: "true"
+    fluentd-address: "127.0.0.1:24224"
+    fluentd-async: "true"
+    fluentd-retry-wait: "3s"
+    fluentd-max-retries: "3"
+    tag: "monitoring.{{.Name}}"
     labels: "service,version,level=monitoring"
 
 # Обратная совместимость (deprecated, будет удалено в следующих версиях)
@@ -664,7 +669,9 @@ services:
     volumes:
       - ./conf/loki/loki-config.yaml:/etc/loki/local-config.yaml:ro
       - ./data/loki:/loki
-    command: -config.file=/etc/loki/local-config.yaml
+    command:
+      - -config.file=/etc/loki/local-config.yaml
+      - -config.expand-env=true
     healthcheck:
       test:
         [
@@ -679,6 +686,7 @@ services:
       # Разрешить автообновление для Loki
       - "com.centurylinklabs.watchtower.enable=true"
       - "com.centurylinklabs.watchtower.scope=logging-stack"
+
   # Alertmanager - управление алертами
   alertmanager:
     image: prom/alertmanager:v0.27.0 # Стабильная версия (v0.29.0 не существует)
@@ -998,7 +1006,7 @@ services:
       - FLB_LOG_LEVEL=info
       # HTTP сервер для метрик и health checks
       - FLB_HTTP_SERVER=On
-      - FLB_HTTP_LISTEN=127.0.0.1
+      - FLB_HTTP_LISTEN=0.0.0.0
       - FLB_HTTP_PORT=2020
       # Health check endpoint
       - FLB_HEALTH_CHECK=On
@@ -1014,6 +1022,8 @@ services:
       - ./conf/fluent-bit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf:ro
       - ./conf/fluent-bit/parsers.conf:/fluent-bit/etc/parsers.conf:ro
       - ./conf/fluent-bit/scripts:/fluent-bit/scripts:ro
+      - ./conf/fluent-bit/filters-log-optimization.conf:/fluent-bit/etc/filters-log-optimization.conf:ro
+      - ./conf/fluent-bit/filters-optimized.conf:/fluent-bit/etc/filters-optimized.conf:ro
       # Dedicated volume для логов с оптимизацией для SSD (Фаза 3)
       - erni-ki-logs:/var/log
       - erni-ki-fluent-db:/fluent-bit/db
