chore: enforce secure js-yaml tmp versions

--- a/package.json
+++ b/package.json
@@ -136,6 +136,10 @@
       ]
     ]
   },
+  "overrides": {
+    "js-yaml": "4.1.1",
+    "tmp": "0.2.5"
+  },
   "volta": {
     "node": "20.18.0",
     "npm": "10.8.2"
