--- a/.github/workflows/deploy-environments.yml
+++ b/.github/workflows/deploy-environments.yml
@@ -81,8 +81,8 @@ jobs:
     name: 🔐 Validate Environment Secrets
     runs-on: ubuntu-latest
     needs: determine-environment
-    environment: ${{ needs.determine-environment.outputs.environment }}
-    if: needs.determine-environment.outputs.should_deploy == 'true'
+    environment: ${{ needs['determine-environment'].outputs.environment }}
+    if: needs['determine-environment'].outputs.should_deploy == 'true'
 
     steps:
       - name: 📥 Checkout code
@@ -91,11 +91,11 @@ jobs:
       - name: 🔍 Validate required config
         # pragma: allowlist secret
         run: |
-          echo "Validating environment config for: ${{ needs.determine-environment.outputs.environment }}"
+          echo "Validating environment config for: ${{ needs['determine-environment'].outputs.environment }}"
 
           # Определяем суффикс для окружения
           ENV_SUFFIX=""
-          case "${{ needs.determine-environment.outputs.environment }}" in
+          case "${{ needs['determine-environment'].outputs.environment }}" in
             "development") ENV_SUFFIX="_DEV" ;;
             "staging") ENV_SUFFIX="_STAGING" ;;
             "production") ENV_SUFFIX="_PROD" ;;
@@ -122,7 +122,7 @@ jobs:
             echo "❌ Missing or invalid environment keys:"
             printf '%s\n' "${missing_env_keys[@]}"
 
-            if [ "${{ needs.determine-environment.outputs.environment }}" = "production" ]; then
+            if [ "${{ needs['determine-environment'].outputs.environment }}" = "production" ]; then
               echo "🔴 CRITICAL: Production environment keys must be real values!"
               exit 1
             else
@@ -150,11 +150,11 @@ jobs:
 
   # Сборка Docker образов с environment-specific конфигурацией
   build-and-deploy:
-    name: 🏗️ Build & Deploy to ${{ needs.determine-environment.outputs.environment }}
+    name: 🏗️ Build & Deploy to ${{ needs['determine-environment'].outputs.environment }}
     runs-on: ubuntu-latest
     needs: [determine-environment, validate-secrets]
-    environment: ${{ needs.determine-environment.outputs.environment }}
-    if: needs.determine-environment.outputs.should_deploy == 'true'
+    environment: ${{ needs['determine-environment'].outputs.environment }}
+    if: needs['determine-environment'].outputs.should_deploy == 'true'
 
     steps:
       - name: 📥 Checkout code
@@ -179,7 +179,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=sha,prefix={{branch}}-
-            type=raw,value=${{ needs.determine-environment.outputs.environment }}-latest
+            type=raw,value=${{ needs['determine-environment'].outputs.environment }}-latest
 
       - name: 🏗️ Build and push Docker image
         uses: docker/build-push-action@v5
@@ -191,22 +191,22 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            ENVIRONMENT=${{ needs.determine-environment.outputs.environment }}
+            ENVIRONMENT=${{ needs['determine-environment'].outputs.environment }}
             BUILD_DATE=${{ github.event.head_commit.timestamp }}
             VCS_REF=${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           secrets: |
-            tunnel_token=${{ secrets[format('TUNNEL_TOKEN_{0}', needs.determine-environment.outputs.environment == 'development' && 'DEV' || needs.determine-environment.outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
-            openai_key=${{ secrets[format('OPENAI_API_KEY_{0}', needs.determine-environment.outputs.environment == 'development' && 'DEV' || needs.determine-environment.outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
+            tunnel_token=${{ secrets[format('TUNNEL_TOKEN_{0}', needs['determine-environment'].outputs.environment == 'development' && 'DEV' || needs['determine-environment'].outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
+            openai_key=${{ secrets[format('OPENAI_API_KEY_{0}', needs['determine-environment'].outputs.environment == 'development' && 'DEV' || needs['determine-environment'].outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
 
   # Деплой в целевое окружение
   deploy:
-    name: 🚀 Deploy to ${{ needs.determine-environment.outputs.environment }}
+    name: 🚀 Deploy to ${{ needs['determine-environment'].outputs.environment }}
     runs-on: ubuntu-latest
     needs: [determine-environment, validate-secrets, build-and-deploy]
-    environment: ${{ needs.determine-environment.outputs.environment }}
-    if: needs.determine-environment.outputs.should_deploy == 'true'
+    environment: ${{ needs['determine-environment'].outputs.environment }}
+    if: needs['determine-environment'].outputs.should_deploy == 'true'
 
     steps:
       - name: 📥 Checkout code
@@ -214,14 +214,14 @@ jobs:
 
       - name: 🔧 Prepare environment configuration
         run: |
-          echo "Preparing configuration for: ${{ needs.determine-environment.outputs.environment }}"
+          echo "Preparing configuration for: ${{ needs['determine-environment'].outputs.environment }}"
 
           # Создаем environment-specific конфигурацию
           mkdir -p .deploy-config
 
           # Определяем суффикс для секретов
           ENV_SUFFIX=""
-          case "${{ needs.determine-environment.outputs.environment }}" in
+          case "${{ needs['determine-environment'].outputs.environment }}" in
             "development") ENV_SUFFIX="_DEV" ;;
             "staging") ENV_SUFFIX="_STAGING" ;;
             "production") ENV_SUFFIX="_PROD" ;;
@@ -229,7 +229,7 @@ jobs:
 
           # Создаем файл с переменными окружения для деплоя
           cat > .deploy-config/environment.env << EOF
-          ENVIRONMENT=${{ needs.determine-environment.outputs.environment }}
+          ENVIRONMENT=${{ needs['determine-environment'].outputs.environment }}
           TUNNEL_TOKEN=${TUNNEL_TOKEN}
           OPENAI_API_KEY=${OPENAI_API_KEY}
           CONTEXT7_API_KEY=${CONTEXT7_API_KEY}
@@ -242,16 +242,16 @@ jobs:
 
           echo "✅ Environment configuration prepared"
         env:
-          TUNNEL_TOKEN: ${{ secrets[format('TUNNEL_TOKEN_{0}', needs.determine-environment.outputs.environment == 'development' && 'DEV' || needs.determine-environment.outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
-          OPENAI_API_KEY: ${{ secrets[format('OPENAI_API_KEY_{0}', needs.determine-environment.outputs.environment == 'development' && 'DEV' || needs.determine-environment.outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
-          CONTEXT7_API_KEY: ${{ secrets[format('CONTEXT7_API_KEY_{0}', needs.determine-environment.outputs.environment == 'development' && 'DEV' || needs.determine-environment.outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
-          ANTHROPIC_API_KEY: ${{ secrets[format('ANTHROPIC_API_KEY_{0}', needs.determine-environment.outputs.environment == 'development' && 'DEV' || needs.determine-environment.outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
-          GOOGLE_API_KEY: ${{ secrets[format('GOOGLE_API_KEY_{0}', needs.determine-environment.outputs.environment == 'development' && 'DEV' || needs.determine-environment.outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
+          TUNNEL_TOKEN: ${{ secrets[format('TUNNEL_TOKEN_{0}', needs['determine-environment'].outputs.environment == 'development' && 'DEV' || needs['determine-environment'].outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
+          OPENAI_API_KEY: ${{ secrets[format('OPENAI_API_KEY_{0}', needs['determine-environment'].outputs.environment == 'development' && 'DEV' || needs['determine-environment'].outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
+          CONTEXT7_API_KEY: ${{ secrets[format('CONTEXT7_API_KEY_{0}', needs['determine-environment'].outputs.environment == 'development' && 'DEV' || needs['determine-environment'].outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
+          ANTHROPIC_API_KEY: ${{ secrets[format('ANTHROPIC_API_KEY_{0}', needs['determine-environment'].outputs.environment == 'development' && 'DEV' || needs['determine-environment'].outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
+          GOOGLE_API_KEY: ${{ secrets[format('GOOGLE_API_KEY_{0}', needs['determine-environment'].outputs.environment == 'development' && 'DEV' || needs['determine-environment'].outputs.environment == 'staging' && 'STAGING' || 'PROD')] }}
 
-      - name: 🎯 Deploy to ${{ needs.determine-environment.outputs.environment }}
+      - name: 🎯 Deploy to ${{ needs['determine-environment'].outputs.environment }}
         run: |
-          echo "🚀 Deploying to ${{ needs.determine-environment.outputs.environment }} environment"
-          echo "📦 Image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.determine-environment.outputs.environment }}-latest"
+          echo "🚀 Deploying to ${{ needs['determine-environment'].outputs.environment }} environment"
+          echo "📦 Image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs['determine-environment'].outputs.environment }}-latest"
           echo "🔧 Configuration: .deploy-config/environment.env"
 
           # Здесь будет реальная логика деплоя (например, через kubectl, docker-compose, etc.)
@@ -259,7 +259,7 @@ jobs:
 
       - name: 📊 Post-deployment verification
         run: |
-          echo "🔍 Verifying deployment in ${{ needs.determine-environment.outputs.environment }}"
+          echo "🔍 Verifying deployment in ${{ needs['determine-environment'].outputs.environment }}"
 
           # Здесь можно добавить проверки здоровья сервисов
           # Например, health checks, smoke tests, etc.
@@ -271,17 +271,17 @@ jobs:
     name: 📢 Deployment Notification
     runs-on: ubuntu-latest
     needs: [determine-environment, deploy]
-    if: always() && needs.determine-environment.outputs.should_deploy == 'true'
+    if: always() && needs['determine-environment'].outputs.should_deploy == 'true'
 
     steps:
       - name: 📢 Send deployment notification
         run: |
           if [ "${{ needs.deploy.result }}" = "success" ]; then
-            echo "✅ Deployment to ${{ needs.determine-environment.outputs.environment }} completed successfully"
-            echo "🔗 Environment: ${{ needs.determine-environment.outputs.environment }}"
+            echo "✅ Deployment to ${{ needs['determine-environment'].outputs.environment }} completed successfully"
+            echo "🔗 Environment: ${{ needs['determine-environment'].outputs.environment }}"
             echo "📦 SHA: ${{ github.sha }}"
             echo "🌿 Branch: ${{ github.ref_name }}"
           else
-            echo "❌ Deployment to ${{ needs.determine-environment.outputs.environment }} failed"
+            echo "❌ Deployment to ${{ needs['determine-environment'].outputs.environment }} failed"
             echo "🔍 Check the logs for details"
           fi
