--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -196,7 +196,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
-          sarif_file: ${{ steps.grype-scan.outputs.sarif }}
+          sarif_file: ${{ steps['grype-scan'].outputs.sarif }}
 
   # Анализ конфигураций
   config-scan:
@@ -312,10 +312,10 @@ jobs:
           echo "| Check | Status |" >> $GITHUB_STEP_SUMMARY
           echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
           echo "| CodeQL | ${{ needs.codeql.result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Dependencies | ${{ needs.dependency-scan.result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Secrets | ${{ needs.secret-scan.result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Containers | ${{ needs.container-scan.result == 'success' && '✅' || needs.container-scan.result == 'skipped' && '⏭️' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Configuration | ${{ needs.config-scan.result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Dependencies | ${{ needs['dependency-scan'].result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Secrets | ${{ needs['secret-scan'].result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Containers | ${{ needs['container-scan'].result == 'success' && '✅' || needs['container-scan'].result == 'skipped' && '⏭️' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Configuration | ${{ needs['config-scan'].result == 'success' && '✅' || '❌' }} |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📋 Recommendations" >> $GITHUB_STEP_SUMMARY
           echo "- Review security alerts in the Security tab" >> $GITHUB_STEP_SUMMARY
@@ -324,7 +324,7 @@ jobs:
           echo "- Regularly rotate secrets and API keys" >> $GITHUB_STEP_SUMMARY
 
       - name: 🚨 Check for critical failures
-        if: needs.codeql.result == 'failure' || needs.dependency-scan.result == 'failure'
+        if: needs.codeql.result == 'failure' || needs['dependency-scan'].result == 'failure'
         run: |
           echo "❌ Critical security checks failed!"
           echo "Please review the security findings before proceeding."
